--- a/docs/25-n8n-first-run.mdx
+++ b/docs/25-n8n-first-run.mdx
@@ -51,7 +51,7 @@ With our Docker setup, n8n should already be running! Let's verify:
   command="docker-compose ps"
   output={`NAME           IMAGE              STATUS       PORTS
 n8n-workshop   n8nio/n8n:latest   Up 2 mins    0.0.0.0:5678->5678/tcp
-mongodb        mongo:7.0          Up 2 mins    0.0.0.0:27017->27017/tcp`}
+n8n-workshop   n8nio/n8n:latest   Up 2 mins    0.0.0.0:5678->5678/tcp`}
 />
 
 If n8n isn't running, start the services:
