--- a/docs/35-voyage-ai-setup.mdx
+++ b/docs/35-voyage-ai-setup.mdx
@@ -6,6 +6,24 @@ sidebar_position: 35
 
 Configure access to multimodal embeddings that process both text and images using our workshop serverless endpoint.
 
+<InstructorNotes 
+  timing="Voyage AI Setup (8-12 minutes)"
+  notes={[
+    "This section moves quickly since we provide the API endpoint",
+    "Attendees often ask why we don't use their own Voyage API keys",
+    "Common confusion: difference between voyage-2 and voyage-3 models",
+    "The EmbeddingTester component is crucial for verifying connectivity",
+    "Some attendees will want to explore other embedding providers"
+  ]}
+  tips={[
+    "Demo the EmbeddingTester component live - show expected output format",
+    "Explain workshop endpoint handles rate limiting and error handling",
+    "Mention this serverless approach works for other embedding APIs too",
+    "Keep this section brief - the real learning happens in workflows",
+    "Have sample text ready for testing (complex multi-sentence examples work best)"
+  ]}
+/>
+
 ## Workshop Serverless Endpoint
 
 For this workshop, we'll use a pre-configured serverless endpoint that handles Voyage AI embeddings without requiring you to manage API keys.
