--- a/docs/70-complete-multimodal-agent.mdx
+++ b/docs/70-complete-multimodal-agent.mdx
@@ -6,6 +6,25 @@ sidebar_position: 70
 
 Build a complete multimodal AI agent that can process PDFs, understand both text and images, and answer questions using MongoDB Vector Search and Voyage AI.
 
+<InstructorNotes 
+  timing="Complete Agent Integration (25-30 minutes)"
+  notes={[
+    "This section integrates everything - expect integration issues to surface",
+    "Memory management becomes important with large PDFs and long conversations",
+    "Error handling is crucial - workflows are now complex enough to fail in multiple ways",
+    "Performance optimization discussions often come up here",
+    "Attendees want to test with their own PDFs - have guidelines ready"
+  ]}
+  tips={[
+    "Start with end-to-end demo showing complete workflow",
+    "Emphasize testing each component individually before integration",
+    "Show monitoring and logging strategies for production workflows",
+    "Discuss scaling considerations (rate limits, memory, storage)",
+    "Have sample questions ready that showcase multimodal capabilities",
+    "Address common production concerns (security, cost, reliability)"
+  ]}
+/>
+
 ## Agent Capabilities
 
 Your finished agent will:
