--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,7 +15,7 @@ Welcome to the **Build a Multimodal PDF Agent with n8n** workshop! This interact
     "Architecture: n8n, MongoDB Atlas, Voyage AI",
     "What we'll build together today"
   ]}
-  instructor="Workshop Instructor"
+  instructor="Michael Lynn"
 />
 
 <InstructorNotes 
@@ -161,7 +161,7 @@ By the end of this workshop, you'll have created:
 
 </WorkshopExercise>
 
-[**Start the Workshop →**](/docs/intro)
+[**Start the Workshop →**](docs/intro)
 
 ---
 
