--- a/docs/75-mongodb-vector-setup.mdx
+++ b/docs/75-mongodb-vector-setup.mdx
@@ -6,46 +6,41 @@ sidebar_position: 75
 
 Configure MongoDB for real vector search capabilities in your multimodal PDF agent.
 
-## Local MongoDB Setup (Codespace)
+## MongoDB Atlas Vector Search Setup
 
-### 1. Connect to MongoDB
+**Important**: This workshop requires MongoDB Atlas for vector search capabilities. Local MongoDB instances do not support vector search indexing.
 
-```bash
-# MongoDB is already running in your Codespace
-mongosh mongodb://localhost:27017/workshop
+### 1. Create the Vector Search Index in Atlas
+
+In MongoDB Atlas, create a vector search index with this configuration:
+
+```json
+{
+  "fields": [
+    {
+      "type": "vector",
+      "path": "embedding",
+      "numDimensions": 1024,
+      "similarity": "cosine"
+    }
+  ]
+}
 ```
 
-### 2. Create the Vector Search Index
+### 2. Atlas Search Index Alternative
 
-```javascript
-// In mongosh, run:
-use workshop
-
-db.pdf_documents.createIndex({
-  "embedding": "cosmosSearch"
-}, {
-  "cosmosSearchOptions": {
-    "kind": "vector-ivf",
-    "numLists": 100,
-    "dimensions": 1536,
-    "similarity": "COS"
-  }
-})
-```
-
-### 3. Alternative: Atlas Search Index
-
-If using MongoDB Atlas, create this search index:
+You can also create a traditional Atlas Search index for text-based search:
 
 ```json
 {
   "mappings": {
     "dynamic": true,
     "fields": {
-      "embedding": {
-        "type": "knnVector",
-        "dimensions": 1536,
-        "similarity": "cosine"
+      "textContent": {
+        "type": "string"
+      },
+      "metadata": {
+        "type": "document"
       }
     }
   }
@@ -54,52 +49,50 @@ If using MongoDB Atlas, create this search index:
 
 ## Setting Up n8n Credentials
 
-### 1. MongoDB Connection
+### 1. MongoDB Atlas Connection
 
 1. In n8n, go to **Credentials** → **New**
 2. Search for **MongoDB**
 3. Configure:
-   - **Connection String**: `mongodb://localhost:27017/workshop`
-   - **Database**: `workshop`
+   - **Connection String**: Your MongoDB Atlas connection string
+   - **Database**: `multimodal_workshop`
 
-### 2. OpenAI API (for embeddings)
+### 2. Voyage AI API (for embeddings)
 
-1. **Credentials** → **New** → **OpenAI**
-2. Add your OpenAI API key
-3. Name it: `OpenAI Workshop`
+1. **Credentials** → **New** → **HTTP Request**
+2. Configure for Voyage AI API
+3. Name it: `Voyage AI Workshop`
 
 ## Testing Your Setup
 
-### 1. Test MongoDB Connection
+### 1. Test MongoDB Atlas Connection
+
+Use the MongoDB Atlas UI or a MongoDB client to test the connection and insert a test document:
 
 ```javascript
-// In mongosh:
-db.pdf_documents.insertOne({
-  filename: "test.pdf",
-  textContent: "Test document",
-  embedding: new Array(1536).fill(0.1)
-})
-
-// Verify:
-db.pdf_documents.findOne()
+{
+  "filename": "test.pdf",
+  "textContent": "Test document",
+  "embedding": /* 1024-dimensional array from Voyage AI */
+}
 ```
 
 ### 2. Test Vector Search
 
+Use this aggregation pipeline to test vector search:
+
 ```javascript
-// Test vector search query:
-db.pdf_documents.aggregate([
+[
   {
-    "$search": {
+    "$vectorSearch": {
       "index": "vector_index",
-      "knnBeta": {
-        "vector": new Array(1536).fill(0.1),
-        "path": "embedding",
-        "k": 5
-      }
+      "path": "embedding",
+      "queryVector": [/* 1024-dimensional query vector */],
+      "numCandidates": 100,
+      "limit": 5
     }
   }
-])
+]
 ```
 
 ## Import the Real Workflow
@@ -134,11 +127,11 @@ curl -X POST http://localhost:5678/webhook/ask \
 - Check index exists: `db.pdf_documents.getIndexes()`
 
 ### "Dimension mismatch"
-- OpenAI text-embedding-3-small produces 1536 dimensions
+- Voyage AI multimodal model produces 1024 dimensions
 - Ensure your index matches this dimension count
 
 ### "Connection refused"
-- Check MongoDB is running: `sudo service mongod status`
-- Verify connection string: `mongodb://localhost:27017/workshop`
+- Check network access settings in MongoDB Atlas
+- Verify connection string includes the full Atlas connection string with credentials
 
 Your real multimodal PDF agent is now ready!
