--- a/docs/summary.mdx
+++ b/docs/summary.mdx
@@ -117,20 +117,7 @@ const summary = await generateSummary(content);
 
 ## 📚 Resources for Continued Learning
 
-### n8n Resources
-- [n8n Documentation](https://docs.n8n.io)
-- [n8n Community Forum](https://community.n8n.io)
-- [n8n Academy](https://n8n.io/academy)
-
-### MongoDB Resources  
-- [MongoDB Atlas Vector Search](https://www.mongodb.com/products/platform/atlas-vector-search?utm_campaign=devrel&utm_source=workshop&utm_medium=cta&utm_content=multimodal_pdf_agent_n8n&utm_term=michael.lynn)
-- [Vector Search Tutorial](https://www.mongodb.com/developer/products/atlas/semantic-search-mongodb-atlas-vector-search/?utm_campaign=devrel&utm_source=workshop&utm_medium=cta&utm_content=multimodal_pdf_agent_n8n&utm_term=michael.lynn)
-- [MongoDB Developer Center](https://www.mongodb.com/developer/?utm_campaign=devrel&utm_source=workshop&utm_medium=cta&utm_content=multimodal_pdf_agent_n8n&utm_term=michael.lynn)
-
-### AI/ML Resources
-- [Voyage AI Documentation](https://docs.voyageai.com)
-- [Gemini AI Documentation](https://ai.google.dev/docs)
-- [RAG Best Practices](https://www.mongodb.com/developer/products/atlas/retrieval-augmented-generation-rag/?utm_campaign=devrel&utm_source=workshop&utm_medium=cta&utm_content=multimodal_pdf_agent_n8n&utm_term=michael.lynn)
+<WorkshopResources />
 
 ## 🌟 Share Your Success
 
@@ -163,3 +150,9 @@ Keep building, keep learning, and keep innovating! 🚀
 **Workshop Repository**: [GitHub - Multimodal PDF Agent with n8n](https://github.com/mongodb-developer/multimodal-pdf-agent-n8n)
 
 **Feedback**: We value your input! Please share your workshop experience and suggestions for improvement.
+
+<WorkshopFeedback 
+  workshopTitle="Multimodal PDF Agent with n8n Workshop"
+  instructorEmail="michael.lynn@mongodb.com"
+  githubRepo="mongodb-developer/multimodal-pdf-agent-n8n"
+/>
