add workflows, restructure content

--- a/docs/25-n8n-first-run.mdx
+++ b/docs/25-n8n-first-run.mdx
@@ -199,8 +199,11 @@ Let's verify everything works:
 
 ### 1. Create Test Workflow
 
-1. Click **Workflows** → **New**
+1. Click **Create New Workflow** or select **Start from Scratch** in the center of the Overview panel.
 2. You'll see a blank canvas with "Start" node
+
+<Screenshot src="/img/blank-workspace.png" alt="n8n Blank Workspace" />
+
 
 ### 2. Add a Simple Node
 
