--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -83,6 +83,9 @@ Configure MongoDB Atlas for vector search and set up Voyage AI for multimodal em
 ### [🔧 Building Workflows](/docs/pdf-processing-workflow)
 Create powerful automation workflows step by step. Start with PDF processing, implement vector search, and build an AI agent with tool calling.
 
+### [📚 Workflows Library](/docs/workflows-library)
+Access all pre-built workshop workflows ready for import. Download and customize workflows for PDF processing, AI agents, and advanced multimodal capabilities.
+
 ### [🎯 Advanced Topics](/docs/complete-multimodal-agent)
 Take your agent to production with advanced features like memory management, web interfaces, and production-grade vector search.
 
